@@ -1,3 +1,4 @@
+* Add support of expand attribute on group tag
 * Add the context model name in the screen context
 * Add sum of records on list view
 * Add shortcuts to Date and DateTime widgets
